syntax = "proto3";
package pylons.pylons;


option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// DoubleKeyValue describes double key/value set
message  DoubleKeyValue {
  string key = 1;
  string value = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}

// LongKeyValue describes long key/value set
message  LongKeyValue {
  string key = 1;
  int64 value = 2;
}

// StringKeyValue describes string key/value set
message  StringKeyValue {
  string key = 1;
  string value = 2;
}

message Item {
  string owner = 1;
  string cookbook_id = 2;
  string id = 3;
  uint64 node_version = 4;
  repeated DoubleKeyValue doubles = 5 [(gogoproto.nullable) = false];
  repeated LongKeyValue longs = 6 [(gogoproto.nullable) = false];
  repeated StringKeyValue strings = 7 [(gogoproto.nullable) = false];
  repeated StringKeyValue mutable_strings = 8 [(gogoproto.nullable) = false];
  bool tradeable = 9;
  int64 last_update = 10;
  repeated cosmos.base.v1beta1.Coin transfer_fee = 11 [(gogoproto.nullable) = false];
  // The percentage of a trade sale retained by the cookbook owner. In the range (0.0, 1.0).
  string trade_percentage = 12 [(gogoproto.nullable) = false,(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  int64 created_at = 13;
  int64 updated_at = 14;
  string recipe_id = 15;
}

message ItemHistory {
  string cookbook_id = 2;
  string id = 3;
  string from = 4;
  string fromAddress = 5;
  string to = 6;
  string toAddress = 7;
  int64 created_at = 8;
}
